# mle-challenge

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
artifacts/: logistic_regression_to_deploy.joblib
challenge/: api.py  exploration.ipynb  model.py
docs/: challenge.md
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
tests/model/: test_model.py
