[project]
name = "challenge-mle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
test = [
    "coverage>=7.13.5",
    "httpx>=0.28.1",
    "locust>=2.43.4",
    "mockito>=2.0.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
